Use secretbox for DMs and secretstream for file transfers

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <script type="application/javascript" src="js/lib/argon2-bundled.min.js"></script>
     <script type="application/javascript" src="js/lib/zxcvbn.js"></script>
     <script type="application/javascript" src="js/etc/locale.js"></script>
+    <script src="js/lib/sodium.js" async></script>
 </head>
 
 <body class="darkMode">
