--- a/index.html
+++ b/index.html
@@ -35,11 +35,10 @@
     <script type="application/javascript" src="js/etc/ui.js"></script>
     <script type="application/javascript" src="js/etc/color.js"></script>
     <script type="application/javascript" src="js/etc/xmpp.js"></script>
-    <script type="application/javascript" src="js/etc/otr.js"></script>
     <script type="application/javascript" src="js/etc/storage.js"></script>
     <script type="application/javascript" src="js/etc/templates.js"></script>
     <script type="application/javascript" src="js/etc/multiParty.js"></script>
-    <script type="application/javascript" src="js/etc/fileTransfer.js"></script>
+    <script type="application/javascript" src="js/etc/file-transfer.js"></script>
     <script type="application/javascript" src="js/etc/customServers.js"></script>
     <script type="application/javascript" src="js/lib/argon2-bundled.min.js"></script>
     <script type="application/javascript" src="js/lib/zxcvbn.js"></script>
